--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -1,4 +1,3 @@
- 
 .container {
   max-width: 1500px;
   margin: 0 auto; /* Set margin to 0 to remove space */
@@ -31,17 +30,16 @@
 }
 
 .advertisement-container {
-position: absolute;
-top: 0;
-left: 0;
-width: auto; /* Allow width to adjust based on content */
-height: 100%;
-display: flex;
-align-items: center;
-z-index: 5; /* Set a high z-index value */
-padding: 20px; /* Add padding for spacing */
-color: #571805; 
-
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto; /* Allow width to adjust based on content */
+  height: 100%;
+  display: flex;
+  align-items: center;
+  z-index: 5; /* Set a high z-index value */
+  padding: 20px; /* Add padding for spacing */
+  color: #571805; 
 }
 
 .advertisement-card {
@@ -121,4 +119,14 @@ color: #571805;
 .image-container.active .call-to-action {
   opacity: 1;
   bottom: -200px;
+}
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+  .advertisement-container {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%; /* Adjusted for better responsiveness */
+    max-width: 350px; /* Adjusted for better responsiveness */
+  }
 }
