--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -61,14 +61,10 @@
 
 
 
-
-
-
-
 /* Header Styles */
 .header1 {
   background-color: rgba(247, 247, 247, 0.959);
-  padding: 1rem 2rem; /* Adjust padding for better spacing on smaller screens */
+  padding: 1rem; 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,8 +77,6 @@
   align-items: center;
 }
 
-
-/* CSS for desktop screens */
 /* CSS for desktop screens */
 @media only screen and (min-width: 768px) {
   .right-section {
@@ -95,8 +89,16 @@
   .right-section {
     display: none; /* Hide the right section for mobile screens */
   }
+  /* Adjust padding for better spacing on smaller screens */
+  .header1 {
+    padding: 1rem; 
+  }
+  
+  /* Adjust font size for better readability on smaller screens */
+  .header1 span {
+    font-size: 0.9rem;
+  }
 }
-
 
 .header1 .feature {
   margin-right: 1rem; /* Adjust margin for better spacing on smaller screens */
@@ -147,11 +149,6 @@ select::-ms-expand {
   height: 1.25rem; /* Adjust the height of the line */
   border-right: 1px solid #ccc; /* Define the line */
 }
-
-
-
-
-
 
 
 
