--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -58,8 +58,6 @@
 
 
 
-
-
 /* Header Styles */
 .header1 {
   background-color: rgba(247, 247, 247, 0.959);
@@ -71,26 +69,29 @@
   text-decoration: #b14024d2;
 }
 
+/* Adjust padding and font size for mobile screens */
 @media only screen and (max-width: 767px) {
-  .right-section {
-    display: none; /* Hide the right section for mobile screens */
+  .header1 {
+    padding: 0.5rem; /* Adjust padding for better spacing on smaller screens */
+  }
+  
+  .header1 span {
+    font-size: 0.8rem; /* Adjust font size for better readability on smaller screens */
   }
 }
+
+/* Hide the right section for mobile screens */
+@media only screen and (max-width: 767px) {
+  .right-section {
+    display: none;
+  }
+}
+
 .header1 .middle-section {
   display: flex;
   align-items: center;
 }
- 
-  /* Adjust padding for better spacing on smaller screens */
-  .header1 {
-    padding: 1rem; 
-  }
-  
-  /* Adjust font size for better readability on smaller screens */
-  .header1 span {
-    font-size: 0.9rem;
-  }
- 
+
 .header1 .feature {
   margin-right: 1rem; /* Adjust margin for better spacing on smaller screens */
   display: inline-block; /* Set to display inline-block */
@@ -140,10 +141,6 @@ select::-ms-expand {
   height: 1.25rem; /* Adjust the height of the line */
   border-right: 1px solid #ccc; /* Define the line */
 }
-
-
-
-
 
 
 
