--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -70,11 +70,16 @@
 }
 
 /* Adjust padding and font size for mobile screens */
- 
+@media only screen and (max-width: 767px) {
+  .header1 {
+    padding: 0.5rem; /* Adjust padding for better spacing on smaller screens */
+  }
+  
   .header1 span {
     font-size: 0.8rem; /* Adjust font size for better readability on smaller screens */
   }
- 
+}
+
 /* Hide the right section for mobile screens */
 @media only screen and (max-width: 767px) {
   .right-section {
