--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -61,22 +61,24 @@
 /* Header Styles */
 .header1 {
   background-color: rgba(247, 247, 247, 0.959);
-  padding: 1rem; 
+  padding: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /* Adjusted alignment */
   align-items: center;
   color: rgba(31, 5, 5, 0.5);
-  text-decoration: #b14024d2;
+  text-decoration: none; /* Changed from text-decoration to none */
+  width: 100%; /* Set width to 100% to fit the screen */
+  flex-wrap: wrap; /* Allow elements to wrap to the next line */
 }
 
 /* Adjust padding and font size for mobile screens */
 @media only screen and (max-width: 767px) {
   .header1 {
-    padding: 0.5rem; /* Adjust padding for better spacing on smaller screens */
+    padding: 0.5rem;
   }
   
   .header1 span {
-    font-size: 0.8rem; /* Adjust font size for better readability on smaller screens */
+    font-size: 0.8rem;
   }
 }
 
@@ -87,47 +89,46 @@
   }
 }
 
-.header1 .middle-section {
+.header1 .left-section {
+  display: flex;
+  align-items: center;
+}
+
+.header1 .right-section {
   display: flex;
   align-items: center;
 }
 
 .header1 .feature {
-  margin-right: 1rem; /* Adjust margin for better spacing on smaller screens */
-  display: inline-block; /* Set to display inline-block */
+  margin-right: 1rem;
+  display: inline-block;
 }
 
-/* CSS for social media icons */
 .social-icon {
-  color: black; /* Set the color to black */
-  border-right: 2px solid #ccc; /* Add vertical line separator */
-  padding-right: 0.5rem; /* Add some space between icons and separator */
-  padding: 0 0.5rem; /* Add space between icons and separators */
+  color: black;
+  border-right: 2px solid #ccc;
+  padding-right: 0.5rem;
+  padding: 0 0.5rem;
 }
 
-/* Remove border from last icon */
 .social-icon:last-child {
   border-right: none;
 }
 
-/* Optional: Add hover effect */
 .social-icon:hover {
-  color: #333; /* Set the hover color */
+  color: #333;
 }
 
-/* Remove background, border, and selection styles for select elements */
 select {
   background-color: transparent;
   border: none;
   outline: none;
 }
 
-/* Remove the default arrow in select elements */
 select::-ms-expand {
   display: none;
 }
 
-/* Vertical line separator */
 .lc-section .feature {
   position: relative;
 }
@@ -136,10 +137,10 @@ select::-ms-expand {
   content: '';
   position: absolute;
   top: 50%;
-  right: -0.625rem; /* Adjust the distance from the right */
+  right: -0.625rem;
   transform: translateY(-50%);
-  height: 1.25rem; /* Adjust the height of the line */
-  border-right: 1px solid #ccc; /* Define the line */
+  height: 1.25rem;
+  border-right: 1px solid #ccc;
 }
 
 
