--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -86,9 +86,18 @@
 /* Hide the right section for mobile screens */
 @media only screen and (max-width: 767px) {
   .right-section {
-    visibility: hidden;
+    display: none;
   }
 }
+
+/* Show the right section on larger screens */
+@media only screen and (min-width: 768px) {
+  .right-section {
+    display: block;
+    visibility: visible;
+  }
+}
+
 
 
 
