Your commit message here

--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -82,15 +82,14 @@
   }
 }
 
-/* Hide the right section for mobile screens */
-/* Hide the right section for mobile screens */
+/* /* Hide the right section for mobile screens */
 @media only screen and (max-width: 767px) {
   .right-section {
     display: none;
   }
 }
 
-/*/* Show the right section on larger screens */
+/* Show the right section on larger screens */
 @media only screen and (min-width: 768px) {
   .right-section {
     display: block;
