--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -58,81 +58,75 @@
 
 
 
+
+
 /* Header Styles */
 .header1 {
   background-color: rgba(247, 247, 247, 0.959);
-  padding: 1rem;
+  padding: 1rem; 
   display: flex;
-  justify-content: space-between; /* Adjusted alignment */
+  justify-content: space-between;
   align-items: center;
   color: rgba(31, 5, 5, 0.5);
-  text-decoration: none; /* Changed from text-decoration to none */
-  width: 100%; /* Set width to 100% to fit the screen */
-  flex-wrap: wrap; /* Allow elements to wrap to the next line */
+  text-decoration: #b14024d2;
 }
 
-/* Adjust padding and font size for mobile screens */
-@media only screen and (max-width: 767px) {
-  .header1 {
-    padding: 0.5rem;
-  }
-  
-  .header1 span {
-    font-size: 0.8rem;
-  }
-}
-
-/* Hide the right section for mobile screens */
 @media only screen and (max-width: 767px) {
   .right-section {
-    display: none;
+    display: none; /* Hide the right section for mobile screens */
   }
 }
-
-
-
-
-
-.header1 .left-section {
+.header1 .middle-section {
   display: flex;
   align-items: center;
 }
-
-.header1 .right-section {
-  display: flex;
-  align-items: center;
-}
-
+ 
+  /* Adjust padding for better spacing on smaller screens */
+  .header1 {
+    padding: 1rem; 
+  }
+  
+  /* Adjust font size for better readability on smaller screens */
+  .header1 span {
+    font-size: 0.9rem;
+  }
+ 
 .header1 .feature {
-  margin-right: 1rem;
-  display: inline-block;
+  margin-right: 1rem; /* Adjust margin for better spacing on smaller screens */
+  display: inline-block; /* Set to display inline-block */
 }
 
+/* CSS for social media icons */
 .social-icon {
-  color: black;
-  border-right: 2px solid #ccc;
-  padding-right: 0.5rem;
-  padding: 0 0.5rem;
+  color: black; /* Set the color to black */
+  border-right: 2px solid #ccc; /* Add vertical line separator */
+  padding-right: 0.5rem; /* Add some space between icons and separator */
+  padding: 0 0.5rem; /* Add space between icons and separators */
 }
 
+/* Remove border from last icon */
 .social-icon:last-child {
   border-right: none;
 }
 
+/* Optional: Add hover effect */
 .social-icon:hover {
-  color: #333;
+  color: #333; /* Set the hover color */
 }
 
+/* Remove background, border, and selection styles for select elements */
 select {
   background-color: transparent;
   border: none;
   outline: none;
 }
 
+/* Remove the default arrow in select elements */
 select::-ms-expand {
   display: none;
 }
 
+/* Vertical line separator */
 .lc-section .feature {
   position: relative;
 }
@@ -141,11 +135,15 @@ select::-ms-expand {
   content: '';
   position: absolute;
   top: 50%;
-  right: -0.625rem;
+  right: -0.625rem; /* Adjust the distance from the right */
   transform: translateY(-50%);
-  height: 1.25rem;
-  border-right: 1px solid #ccc;
+  height: 1.25rem; /* Adjust the height of the line */
+  border-right: 1px solid #ccc; /* Define the line */
 }
+
+
+
+
 
 
 
