--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -58,8 +58,6 @@
 
 
 
-
-
 /* Header Styles */
 .header1 {
   background-color: rgba(247, 247, 247, 0.959);
@@ -69,6 +67,7 @@
   align-items: center;
   color: rgba(31, 5, 5, 0.5);
   text-decoration: #b14024d2;
+  flex-wrap: nowrap; /* Prevent wrapping */
 }
 
 @media only screen and (max-width: 767px) {
@@ -76,20 +75,21 @@
     display: none; /* Hide the right section for mobile screens */
   }
 }
+
 .header1 .middle-section {
   display: flex;
   align-items: center;
 }
  
-  /* Adjust padding for better spacing on smaller screens */
-  .header1 {
-    padding: 1rem; 
-  }
+/* Adjust padding for better spacing on smaller screens */
+.header1 {
+  padding: 1rem; 
+}
   
-  /* Adjust font size for better readability on smaller screens */
-  .header1 span {
-    font-size: 0.9rem;
-  }
+/* Adjust font size for better readability on smaller screens */
+.header1 span {
+  font-size: 0.9rem;
+}
  
 .header1 .feature {
   margin-right: 1rem; /* Adjust margin for better spacing on smaller screens */
@@ -140,7 +140,6 @@ select::-ms-expand {
   height: 1.25rem; /* Adjust the height of the line */
   border-right: 1px solid #ccc; /* Define the line */
 }
-
 
 
 
