--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -340,12 +340,17 @@ select::-ms-expand {
  
 
 @media only screen and (max-width: 767px) {
-  .logo {
+  .logo1 {
     display: none; /* Hide the right section for mobile screens */
   }
 }
 
 
+@media only screen and (max-width: 767px) {
+  .sign {
+    display: none; /* Hide the right section for mobile screens */
+  }
+}
 
 
 
