Your commit message here

--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -9,11 +9,11 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.custom-header .logo {
+.custom-header .lago {
   flex: 0 0 auto;
 }
 
-.custom-header .logo img {
+.custom-header .lago img {
   max-width: 100px;
 }
 
@@ -243,10 +243,10 @@ select::-ms-expand {
 
   .dropdown-content a {
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+ 
   }
 
-  .logo {
+  .logo1 {
     display: none;
   }
 }
@@ -260,7 +260,7 @@ select::-ms-expand {
 }
 
 /* Logo Styling */
-.logo {
+.logo1 {
   color: #fff;
   font-weight: bold;
   font-size: 2em;
