--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -18,24 +18,25 @@
 }
 
 
-
-@media only screen and (max-width: 767px) {
-  .custom-header .header-content {
-    display: none;
-    display: flex;
-    align-items: center;
-  }
+.custom-header .header-content {
+  display: flex;
+  align-items: center;
 }
-@media only screen and (max-width: 767px) {
+
 .custom-header .title-section {
   display: flex;
   align-items: center;
 }
-}
+
 .custom-header .site-title {
   margin: 0;
   font-size: 1.5rem; /* Adjust font size for better readability on smaller screens */
   color: #333;
+}
+@media only screen and (max-width: 767px) {
+  .tagline.blink {
+    display: none; /* Hide the tagline on smaller screens */
+  }
 }
 
 .custom-header .tagline {
