--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -4,9 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 2rem; /* Adjust padding for better spacing on smaller screens */
-  background-color: #f0f0f0;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1rem 1rem; /* Adjust padding for better spacing on smaller screens */
+  background-color: #e4d5d5a6;
+  box-shadow: 0px 2px 4px rgba(219, 213, 213, 0.199);
+  height: 4.10em;
 }
 
 .custom-header .lago {
@@ -29,9 +30,10 @@
 }
 
 .custom-header .site-title {
-  margin: 0;
+ 
   font-size: 1.5rem; /* Adjust font size for better readability on smaller screens */
   color: #333;
+  margin: -1210px;
 }
 @media only screen and (max-width: 767px) {
   .tagline.blink {
@@ -40,8 +42,8 @@
 }
 
 .custom-header .tagline {
-  margin: 0;
-  font-size: 1.2rem; /* Adjust font size for better readability on smaller screens */
+  margin-left: 1310px;
+  font-size: 1.5rem; /* Adjust font size for better readability on smaller screens */
   color: #791010;
 }
 
@@ -66,6 +68,7 @@
 
 /* Header Styles */
 .header1 {
+  
   background-color: rgba(247, 247, 247, 0.959);
   padding: 0.5rem 1rem; /* Reduced padding */
   display: flex;
@@ -95,7 +98,7 @@
 .header1 .feature {
   margin-right: 0.10rem; /* Reduced margin */
   display: inline-block;
-  font-size: 0.5rem; /* Reduced font size */
+  font-size: 1.0rem; /* Reduced font size */
 }
 
 /* CSS for social media icons */
@@ -121,7 +124,7 @@ select {
   background-color: transparent;
   border: none;
   outline: none;
-  font-size: 0.5rem; /* Reduced font size */
+  font-size: 1.0rem; /* Reduced font size */
 }
 
 /* Remove the default arrow in select elements */
@@ -171,7 +174,7 @@ select::-ms-expand {
   }
 
   .custom-header .tagline {
-    font-size: 1rem; /* Adjust font size for better readability on smaller screens */
+    font-size: 2rem; /* Adjust font size for better readability on smaller screens */
   }
 
   .header1 {
@@ -270,7 +273,7 @@ select::-ms-expand {
   color: #fff;
   font-weight: bold;
   font-size: 2em;
-  margin-right: 20px; /* Add margin to separate from other elements */
+  margin-right: 520px;
 }
 
 /* Menu Links Styling */
