--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -1,13 +1,14 @@
+ 
 .container {
-  max-width: 100%; /* Set max-width to 90% */
-  margin: 0 auto; /* Center the container */
+  max-width: 1500px;
+  margin: 0 auto; /* Set margin to 0 to remove space */
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 80px);
 }
 
-.image1-container {
+.image-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -18,34 +19,113 @@
   z-index: -1; /* Move images behind other content */
 }
 
-.image1-container.active {
+.image-container.active {
   opacity: 1;
   z-index: 0; /* Bring active image to the front */
 }
 
-.image1-container img {
+.image-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .advertisement-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: auto; /* Allow width to adjust based on content */
-  height: 100%;
-  display: flex;
-  align-items: center;
-  z-index: 5; /* Set a high z-index value */
-  padding: 20px; /* Add padding for spacing */
-  color: #571805;
+position: absolute;
+top: 0;
+left: 0;
+width: auto; /* Allow width to adjust based on content */
+height: 100%;
+display: flex;
+align-items: center;
+z-index: 5; /* Set a high z-index value */
+padding: 20px; /* Add padding for spacing */
+color: #571805; 
+
 }
 
 .advertisement-card {
-  max-width: 90%; /* Adjust width as needed */
+  max-width: 400px; /* Adjust width as needed */
   padding: 20px;
-  background-color: rgba(116, 53, 53, 0.5); /* Semi-transparent white background */
+  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
   border-radius: 5px;
   text-align: center;
 }
@@ -59,7 +139,7 @@
   margin-bottom: 15px;
   font-size: 1.1rem;
   color: rgb(253, 253, 253);
-  font-weight: bold;
+  font-weight: bold; 
 }
 
 .advertisement-card .btn {
@@ -88,12 +168,12 @@
 
 @keyframes fadeInAnimation {
   from {
-    opacity: 0.1;
-    transform: translateY(-20px);
+      opacity: 0.1;
+      transform: translateY(-20px);
   }
   to {
-    opacity: 1;
-    transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
   }
 }
 
@@ -118,16 +198,5 @@
 
 .image-container.active .call-to-action {
   opacity: 1;
-}
-
-/* Media Queries */
-@media screen and (max-width: 768px) {
-  .advertisement-container {
-    top: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 90%; /* Adjusted for better responsiveness */
-  }
-  .call-to-action {
-    bottom: -200px; /* Adjusted for mobile devices */
-  }
+  bottom: -200px;
 }
