--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -1,7 +1,7 @@
- 
+/* Default styles */
 .container {
   max-width: 1500px;
-  margin: 0 auto; /* Set margin to 0 to remove space */
+  margin: 0 auto;
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -14,14 +14,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  transition: opacity 1s ease;
-  z-index: -1; /* Move images behind other content */
+  opacity: 1;
+  transition: opacity 1.0s ease;
+  z-index: -1;
 }
 
 .image-container.active {
   opacity: 1;
-  z-index: 0; /* Bring active image to the front */
+  z-index: 0;
 }
 
 .image-container img {
@@ -30,102 +30,23 @@
   object-fit: cover;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .advertisement-container {
-position: absolute;
-top: 0;
-left: 0;
-width: auto; /* Allow width to adjust based on content */
-height: 100%;
-display: flex;
-align-items: center;
-z-index: 5; /* Set a high z-index value */
-padding: 20px; /* Add padding for spacing */
-color: #571805; 
-
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  z-index: 5;
+  padding: 20px;
+  color: #571805;
 }
 
 .advertisement-card {
-  max-width: 400px; /* Adjust width as needed */
+  max-width: 400px;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
   text-align: center;
 }
@@ -153,13 +74,13 @@ color: #571805;
   transform: translate(-50%, -50%);
   padding: 10px;
   border-radius: 5px;
-  font-size: 30px; /* Increase font size */
-  font-weight: bold; /* Make text bold */
-  color: white; /* Set text color to white */
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
   opacity: 0;
   transition: opacity 1.5s ease;
   text-align: center;
-  background-color: transparent; /* Remove background */
+  background-color: transparent;
 }
 
 .fade-in {
@@ -168,12 +89,12 @@ color: #571805;
 
 @keyframes fadeInAnimation {
   from {
-      opacity: 0.1;
-      transform: translateY(-20px);
+    opacity: 0.1;
+    transform: translateY(-20px);
   }
   to {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -199,4 +120,21 @@ color: #571805;
 .image-container.active .call-to-action {
   opacity: 1;
   bottom: -200px;
+}
+
+/* Media queries for responsive design */
+@media screen and (max-width: 768px) {
+  .image-description {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    height: calc(100vh - 100px);
+  }
+
+  .image-description {
+    font-size: 16px;
+  }
 }
