--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -1,7 +1,7 @@
-/* Default styles */
+ 
 .container {
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 0 auto; /* Set margin to 0 to remove space */
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -14,14 +14,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 1;
-  transition: opacity 1.0s ease;
-  z-index: -1;
+  opacity: 1; /* Initially hide all images */
+  transition: opacity 1.0s ease; /* Reduce transition duration */
+  z-index: -1; /* Move images behind other content */
 }
 
 .image-container.active {
   opacity: 1;
-  z-index: 0;
+  z-index: 0; /* Bring active image to the front */
 }
 
 .image-container img {
@@ -30,9 +30,88 @@
   object-fit: cover;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Default styles for advertisement container */
 .advertisement-container {
   position: absolute;
-  top: 0;
+  top: 0; /* Top position by default */
   left: 0;
   width: auto;
   height: 100%;
@@ -67,6 +146,18 @@
   font-size: 1rem;
 }
 
+/* Media query for phone screens */
+@media screen and (max-width: 768px) {
+  .advertisement-container {
+    left: 50%; /* Center the container horizontally */
+    transform: translateX(-50%);
+    top: 20px; /* Adjust top position for smaller screens */
+    padding: 10px; /* Adjust padding for smaller screens */
+    align-items: flex-start; /* Align items at the top */
+  }
+}
+
+
 .image-description {
   position: absolute;
   top: 50%;
@@ -74,13 +165,13 @@
   transform: translate(-50%, -50%);
   padding: 10px;
   border-radius: 5px;
-  font-size: 30px;
-  font-weight: bold;
-  color: white;
+  font-size: 30px; /* Increase font size */
+  font-weight: bold; /* Make text bold */
+  color: white; /* Set text color to white */
   opacity: 0;
   transition: opacity 1.5s ease;
   text-align: center;
-  background-color: transparent;
+  background-color: transparent; /* Remove background */
 }
 
 .fade-in {
@@ -89,12 +180,12 @@
 
 @keyframes fadeInAnimation {
   from {
-    opacity: 0.1;
-    transform: translateY(-20px);
+      opacity: 0.1;
+      transform: translateY(-20px);
   }
   to {
-    opacity: 1;
-    transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
   }
 }
 
@@ -120,21 +211,4 @@
 .image-container.active .call-to-action {
   opacity: 1;
   bottom: -200px;
-}
-
-/* Media queries for responsive design */
-@media screen and (max-width: 768px) {
-  .image-description {
-    font-size: 20px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .container {
-    height: calc(100vh - 100px);
-  }
-
-  .image-description {
-    font-size: 16px;
-  }
 }
